# PSForge

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  README_EN.md  README_ZH.md  check_prompts.py  check_tools.py  claude_desktop_config.example.json  codex_config.example.toml  pyproject.toml  start_psforge.bat  test_connection.py
psforge/: __init__.py  app.py  decorators.py  registry.py  server.py
psforge/prompts/: __init__.py  image_analyzer.py
psforge/ps_adapter/: __init__.py  action_manager.py  application.py  context.py  process_guard.py  utils.py
psforge/resources/: __init__.py  registry.py
psforge/tools/: __init__.py  action_tools.py  adjustment_tools.py  batch_tools.py  capture_tools.py  document_tools.py  filter_tools.py  history_tools.py  image_tools.py  inspect_tools.py  layer_ordering_tools.py  layer_properties_tools.py  layer_tools.py  layer_transform_tools.py  mask_tools.py  recreate_tools.py  registry.py  script_tools.py  selection_tools.py  session_tools.py  text_tools.py
tests/: __init__.py
tests/integration/: __init__.py  test_photoshop_integration.py
tests/unit/: __init__.py  test_server.py
