[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "psforge"
version = "0.2.0"
description = "AI-Powered Photoshop Automation via Model Context Protocol (MCP)"
authors = ["deermiya"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/deermiya/PSForge"
repository = "https://github.com/deermiya/PSForge"
keywords = ["photoshop", "mcp", "automation", "ai", "adobe", "com"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "psforge"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
mcp = "^1.6.0"
photoshop-python-api = "^0.24.0"
loguru = "^0.7.3"
tenacity = "^9.0.0"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"

[tool.poetry.scripts]
psforge = "psforge.server:run"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
